--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <link
       rel="preload"
-      href="/images/carli.webp"
+      href="/images/rsz_carli.jpg"
       as="image"
       type="image/webp"
       imagesrcset="/images/carli.webp"
